# jadepix

./: CMakeLists.txt  README.md
BasicSiliconPixel_example/: README.md
BasicSiliconPixel_example/BasicSiliconPixel/: CMakeLists.txt  G4History.macro  GNUmakefile  basicSiliconPixel.cc  local_setup.sh
JadePixRecon/: JadePixRecon.cxx  Makefile  cepcvtx_setup.sh  runRec.sh  runSup.sh
JadePixRecon/config/: config.txt
JadePixRecon/data/: Jadepix_Iron55.recdat
JadePixRecon/include/: JadePixChip.h  JadePixCluster.h  JadePixDigi.h  JadePixEvent.h  JadePixGeo.h  JadePixHit.h  JadePixIO.h  JadePixParser.h  JadePixSuppress.h
JadePixRecon/macros/: GaussLorentz.c  Mimosa_thr100.root  Mimosa_thr50.root  chargeDistribution.c  resDistribution.c
JadePixRecon/src/: JadePixChip.cxx  JadePixCluster.cxx  JadePixDigi.cxx  JadePixEvent.cxx  JadePixGeo.cxx  JadePixHit.cxx  JadePixIO.cxx  JadePixParser.cxx  JadePixSuppress.cxx
JadePixSim/: CMakeLists.txt  cepcvtx_setup.sh  jadepix.cc
JadePixSim/include/: JadePixAnalysis.hh  JadePixDetectorConstruction.hh  JadePixDetectorMessenger.hh  JadePixDigi.hh  JadePixDigitizer.hh  JadePixEventAction.hh  JadePixEventActionMessenger.hh  JadePixGeoParameter.hh  JadePixMySession.hh  JadePixPrimaryGeneratorAction.hh  JadePixPrimaryGeneratorActionMessenger.hh  JadePixRunAction.hh  JadePixWriter.hh
JadePixSim/macros/: Fe55.mac  run2.mac  test1_Fe55.mac  test2_Fe55.mac  testFe55.mac  vis.mac
JadePixSim/model/: Jadipix.txt  Spt.txt
JadePixSim/src/: JadePixDetectorConstruction.cc  JadePixDetectorMessenger.cc  JadePixDigitizer.cc  JadePixEventAction.cc  JadePixEventActionMessenger.cc  JadePixGeoParameter.cc  JadePixIdentifier.cc  JadePixPrimaryGeneratorAction.cc  JadePixPrimaryGeneratorActionMessenger.cc  JadePixRunAction.cc  JadePixSD.cc  JadePixWriter.cc
Mimosa/: CMakeLists.txt  cepcvtx_setup.sh  local_setup.sh  mimosa.cc
MimosaRecon/: Makefile  local_setup.sh  runBin.sh  runRec.sh
cmake/: FindCLHEP.cmake
etc/: cepcvtx_setup.sh  local_setup.sh
include/: JadepixDecoder.h  JadepixFrame.h  JadipixDecoder.h
jadepix1/: CMakeLists.txt  Makefile  README.md  build.sh  setup.sh  submit.sh
jadepix1/CCEanalysis/script/: ProcessData.py  ProcessEvent_List.py  ProcessEvent_Numpy.py  ProcessFrame.py  process_events_add.cxx
jadepix1/Run/: .cepcvtx_init.sh.swp  build.sh  cepcvtx_init.sh  reset.sh  submit.sh
jadepix1/Simulation/: jadepix1_detector.conf
jadepix1/Simulation/output/: modules.root
jadepix1/conf/: jadepix1.conf  jadepix1_detector.conf  jadepix1_main.conf  jadepix1_with_electric_field_main.conf  jadepix1_without_electric_field_main.conf  jadepix1withelectricfield_main.conf  jadepix1withoutelectricfield_main.conf
jadepix1/conf/JadePixModels/: jadepix.conf  jadepix_A1.conf  jadepix_A1_sr.conf  jadepix_sensor.conf
jadepix1/conf/mymodels/: jadepix1.conf
jadepix1/doc/: Explanation_For_JadePix1.docx
jadepix1/include/: EFGen.hh  EFReadDFISE.hh  EFString.hh  EField.hh
jadepix1/python/: ProcessEvent_List.py  ProcessEvent_Numpy.py  cceanalysis.py  draw_compare_hit.py  plot_cce_graph.py  plot_cce_profile.py  plot_compare_cce.py  plot_compare_hit.py  plot_hit.py  plot_seed_and_cluster.py
jadepix1/python/decode/data_sample/: cluster33_weak_iron55_thr500.root  cluster55_weak_iron55_thr500.root  cluster77_weak_iron55_thr500.root
jadepix1/python/decode/src/: Iron55_cluster33.py  Iron55_cluster55.py  Iron55_cluster77.py  Sr90_cluster33.py  Sr90_cluster55.py  Sr90_cluster77.py  cluster55_ex.py  plot_iron55.py  plot_size_distribution.py  plot_sr90.py  select_samples_frames.py
jadepix1/python/sim/: ProcessEvent_List.py  ProcessEvent_Numpy.py  cceanalysis.py  plot_adc_hit.py  plot_compare_cce.py  plot_compare_hit.py
jadepix1/run/: .cepcvtx_init.sh.swp  build.sh  cleanup.sh  setup.sh  submit.sh
jadepix1/src/: CMOS.cc  CMOS.hh  EFAna.cc  EFGen.cc  EFReadDFISE.cc  EField.cc  EField.hh  EFieldTest.cc  Makefile  README  conf_param.hh  convert.cc  define_hist.hh  genApx.cc  pixelana.cc
macros/: run1.mac  testRun.mac
model/: Jadipix.txt  Spt.txt  SptTemp.txt
python/: JadipixDecoder.py  test.py
run/: runRec.sh  runSim.sh  runTest.sh
software/: CMakeLists.txt
software/exec/: CMakeLists.txt
software/exec/src/: JadePix.cc
software/lib/ana/core/: CMakeLists.txt
software/lib/ana/core/include/: JadeAnalysis.hh  JadeCluster.hh  JadeDataFrame.hh  JadeManager.hh  JadeMonitor.hh  JadeRead.hh  JadeRun.hh
software/lib/ana/core/src/: JadeAnalysis.cc  JadeCluster.cc  JadeDataFrame.cc  JadeFilter.cc  JadeManager.cc  JadeMonitor.cc  JadeRead.cc  JadeRun.cc
software/lib/ana/exe/: CMakeLists.txt
software/lib/ana/exe/src/: RunTest.cxx  SystemTest.cxx
software/lib/recon/: CMakeLists.txt
software/lib/recon/include/: JadeChip.hh  JadeCluster.hh  JadeDigi.hh  JadeEvent.hh  JadeGeo.hh  JadeHit.hh  JadeIO.hh  JadeParser.hh  JadeRecon.hh  JadeSuppress.hh
software/lib/recon/macros/: posResPixPitch.c
software/lib/recon/src/: JadeChip.cxx  JadeCluster.cxx  JadeDigi.cxx  JadeEvent.cxx  JadeGeo.cxx  JadeHit.cxx  JadeIO.cxx  JadeParser.cxx  JadeRecon.cxx  JadeSuppress.cxx
software/lib/sim/: .swp  CMakeLists.txt
software/lib/sim/include/: JadePixDigi.hh  JadePixDigitizer.hh  JadePixEventAction.hh  JadePixGeoParameter.hh  JadePixHit.hh  JadePixIdentifier.hh  JadePixMySession.hh  JadePixPhysicsList.hh  JadePixPhysicsListMessenger.hh  JadePixPrimaryGeneratorAction.hh  JadePixPrimaryGeneratorActionMessenger.hh  JadePixRunAction.hh  JadePixSD.hh  JadePixSim.hh  JadePixWriter.hh
software/lib/sim/src/: JadePixDetectorConstruction.cc  JadePixDetectorMessenger.cc  JadePixDigi.cc  JadePixDigitizer.cc  JadePixEventAction.cc  JadePixGeoParameter.cc  JadePixHit.cc  JadePixMySession.cc  JadePixPhysicsList.cc  JadePixPhysicsListMessenger.cc  JadePixPrimaryGeneratorAction.cc  JadePixRunAction.cc  JadePixSD.cc  JadePixSim.cc  JadePixWriter.cc
src/: JadepixDecoder.cpp  JadipixDecoder.cpp
swig/: jadipix.i
test/: rwbin.c
work/: cepcvtx_init.sh  chargeCompare.c  chargeDistribution.c  chargeDistributionCompare.c  run.sh  runSim.sh  runTest.sh
(+115 files in other folders)
